--- a/Website/Blazor/Components/Container.razor
+++ b/Website/Blazor/Components/Container.razor
@@ -1,6 +1,4 @@
-﻿@using System.ComponentModel
-@using System.Drawing
-<div id="@Id" class="con" style="outline: @BackgroundColor solid 2px; width: @Width; max-width: 100%; @MainDivStyleOverride">
+﻿<div id="@Id" class="con" style="outline: @BackgroundColor solid 2px; width: @Width; max-width: 100%; @MainDivStyleOverride">
     <div @onclick="() => _hidden = !_hidden" style="background-color: @BackgroundColor; height: 28px; width: 100%; cursor: pointer ">
         <div>
             <div>
