--- a/Website/Blazor/Components/FileBadgeRemoveable.razor
+++ b/Website/Blazor/Components/FileBadgeRemoveable.razor
@@ -1,8 +1,4 @@
-﻿@using Website.Data
-@using Website.Model
-@inject NavigationManager Navigator
-
-@if (FileModel is not null)
+﻿@if (FileModel is not null)
 {
     <span title="@($"File:\"{FileModel.FileName}\" id:{FileModel.Guid}")"
           class="link file-item"
