--- a/Website/Blazor/Layout/FixIssueLayout.razor
+++ b/Website/Blazor/Layout/FixIssueLayout.razor
@@ -1,8 +1,5 @@
-﻿@using Microsoft.AspNetCore.Components.Authorization
-@using Website.Model
-@inherits IssueLayout
-@inject IHttpContextAccessor HttpContext
-@inject IJSRuntime js
+﻿@inherits IssueLayout
+@inject IHttpContextAccessor HttpContext 
 @{
     UserModel? user = null;
     bool admin = false;
