--- a/Website/Blazor/Layout/IssueLayout.razor
+++ b/Website/Blazor/Layout/IssueLayout.razor
@@ -1,8 +1,5 @@
-﻿@using Microsoft.AspNetCore.Components.Authorization
-@using Website.Model
-@inherits LayoutComponentBase
-@inject IHttpContextAccessor HttpContext
-@inject IJSRuntime js
+﻿@inherits LayoutComponentBase
+@inject IHttpContextAccessor HttpContext 
 @{
     UserModel? user = null;
     bool admin = false;
@@ -56,6 +53,6 @@
 
     protected override void OnAfterRender(bool f)
     {
-        js.InvokeVoidAsync("hljs.highlightAll");
+        JsRuntime.InvokeVoidAsync("hljs.highlightAll");
     }
 }
