--- a/Website/Blazor/Layout/MainLayout.razor
+++ b/Website/Blazor/Layout/MainLayout.razor
@@ -1,8 +1,5 @@
-﻿@using Microsoft.AspNetCore.Components.Authorization
-@using Website.Model
-@inherits LayoutComponentBase
-@inject IHttpContextAccessor HttpContext
-@inject IJSRuntime js
+﻿@inherits LayoutComponentBase
+@inject IHttpContextAccessor HttpContext 
 @{
     UserModel? user = null;
     bool admin = false;
@@ -53,7 +50,7 @@
 {
     protected override void OnAfterRender(bool f)
     {
-        js.InvokeVoidAsync("hljs.highlightAll");
+        JsRuntime.InvokeVoidAsync("hljs.highlightAll");
         if (f)
         {
             //js.InvokeVoidAsync("clearMathJax");
