--- a/Website/Blazor/Layout/ProjectLayout.razor
+++ b/Website/Blazor/Layout/ProjectLayout.razor
@@ -1,8 +1,5 @@
-﻿@using Microsoft.AspNetCore.Components.Authorization
-@using Website.Model
-@inherits LayoutComponentBase
-@inject IHttpContextAccessor HttpContext
-@inject IJSRuntime js
+﻿@inherits LayoutComponentBase
+@inject IHttpContextAccessor HttpContext 
 @{
     UserModel? user = null;
     bool admin = false;
@@ -57,6 +54,6 @@
     public string? PreviewWide { get; set; }
     protected override void OnAfterRender(bool f)
     {
-        js.InvokeVoidAsync("hljs.highlightAll");
+        JsRuntime.InvokeVoidAsync("hljs.highlightAll");
     }
 }
