--- a/Website/Blazor/Pages/Home.razor
+++ b/Website/Blazor/Pages/Home.razor
@@ -1,11 +1,9 @@
 ﻿@page "/"
-@using Website.Data
-@inject NavigationManager nav
 <PageTitle>BugTracker - Home Page</PageTitle>
 @code{
     protected override void OnAfterRender(bool firstRender)
     {
-        if(!string.IsNullOrWhiteSpace(Config.Instance.MainRedirectTo) && firstRender) nav.NavigateTo(Config.Instance.MainRedirectTo);
+        if(!string.IsNullOrWhiteSpace(Config.Instance.MainRedirectTo) && firstRender) Navigation.NavigateTo(Config.Instance.MainRedirectTo);
     }
 }
 
