--- a/Website/Blazor/Routes.razor
+++ b/Website/Blazor/Routes.razor
@@ -1,6 +1,4 @@
-﻿@using Website.Blazor.Layout
-@using Website.Blazor.Pages
-<Router AppAssembly="typeof(Program).Assembly">
+﻿<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
