Localized most of the pages

--- a/Website/Blazor/Components/FileBadge.razor
+++ b/Website/Blazor/Components/FileBadge.razor
@@ -22,7 +22,7 @@ else
     <a title="File not exists or broken link" class="link grayed">
         <span class="bg">
             <img class="user-icon" src="/fileformat/broken.png" />
-            Deleted
+            @(Localizer["filebadge_deleted"])
         </span>
     </a>
 }
