--- a/Website/Blazor/Pages/Admin/Admin.razor
+++ b/Website/Blazor/Pages/Admin/Admin.razor
@@ -10,11 +10,11 @@
 
 <div class="container">
     <div class="header">
-        <h2>Панель управления</h2>
+        <h2>@(Localizer["admin_controlpanel"])</h2>
     </div>
 
     <div class="card">
-        <h3>Проекты</h3>
+        <h3>@(Localizer["admin_projects"])</h3>
         <br />
         <table>
             <thead>
