--- a/Website/Blazor/Components/RestorePasswordForm.razor
+++ b/Website/Blazor/Components/RestorePasswordForm.razor
@@ -2,7 +2,7 @@
     <p>Введите адрес электронной почты от аккаунта ниже.</p>
     <form method="post" id="login_form" action="/api/auth/restore">
         <input type="email" id="email" name="email" style="width: 100%">
-
+        TODO
         <p id="login_error" style="color: red; text-align: center"></p>
         
         <div class="actions">
