--- a/Website/Blazor/Pages/Project/Issues/EditIssue.razor
+++ b/Website/Blazor/Pages/Project/Issues/EditIssue.razor
@@ -14,7 +14,7 @@
 <div class="flex">
     <div class="center">
         <h3 class="center-text">
-            Редактирование Задачи <b>@(ProjectCode)-@(IssueId)</b>
+            @Localizer["issue_edit_header"] <b>@(ProjectCode)-@(IssueId)</b>
         </h3>
         <div class="content" style="left: 50%">
             <div class="box" style="width: 100%">
