--- a/Website/Blazor/Components/NavMenuProject.razor
+++ b/Website/Blazor/Components/NavMenuProject.razor
@@ -75,8 +75,10 @@
                 </NavLink>
             </div>
         }
-
     </nav>
+    <div class="lang">
+        <LangSwitcher />
+    </div>
 </div>
 
 @code {
