--- a/Website/Blazor/Components/NavMenuProject.razor.css
+++ b/Website/Blazor/Components/NavMenuProject.razor.css
@@ -105,3 +105,10 @@
         overflow-y: auto;
     }
 }
+.lang {
+    border-top: 1px solid #5669b2;
+    height: 50px;
+    top: 100%;
+    position: sticky;
+    margin-bottom: 10px;
+}
