--- a/Website/Blazor/Components/LangSwitcher.razor
+++ b/Website/Blazor/Components/LangSwitcher.razor
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Localization
 <div id="langDropdown" class="language-dropdown">
     <button @onclick="ToggleDropdown" class="dropdown-toggle">
-        @GetFlag(CurrentCulture) @GetLanguageName(CurrentCulture)
+        @GetFlag(CurrentCulture) @Localizer["lang_name"]
     </button>
 
     @if (IsOpen)
